sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:14: error: not found: value i
        i
        ^